--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -9,11 +9,15 @@
                 color:blue;
                 font-family:calibri;
              }
+             img{
+             width: 20%;
+             height: 20%;
+             }
         </style>
     </head>
     <body>
         <h2>About</h2>
-        <img src="shizzy.jpg" alt="" width="200">
+        <img src="shizzy.jpg">
         <h3>Ian Wachira Kamau</h3>
         <p>I'm a young at heart developer learning the rails in order to be a ruby on the rails</p>
         <h3>Contact</h3>
@@ -21,7 +25,7 @@
             <li>Tel: 0718883560</li>
             <li>Email: iankamau58@gmail.com</li>
             <li>Lecturer: Joseph Mwangi</li>
-            <li>Assisted By: Mobidev </li>
+            <li>Assisted By: Mobidev Limited Kenya (Hilary Egesa) </li>
         </ul>
         <br><br>
 
