--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -10,8 +10,11 @@
                 font-family:calibri;
              }
              img{
-             width: 20%;
-             height: 20%;
+             width: 60%;
+             height: 30%;
+             }
+             body{
+             background-image: assets/shizzy.jpg;
              }
         </style>
     </head>
